use langfuse for tracing

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 DATABASE_PATH=
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_SECRET_KEY=
+LANGFUSE_HOST=https://cloud.langfuse.com
